fixing font size on mobile

--- a/src/styles/list.css
+++ b/src/styles/list.css
@@ -21,6 +21,8 @@
 }
 
 .channel__content {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -39,9 +41,13 @@
 }
 
 .channel__label {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
   font-weight: bold;
   text-align: left;
-  padding: 8px 0 8px 8px;
+  padding: 4px 0 4px 4px;
+  font-size: 12px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -66,6 +72,10 @@
     padding: 24px 0;
   }
 
+  .channel__label {
+    padding: 8px 0 8px 8px;
+    font-size: 14px;
+  }
 }
 
 
